changed come deprecated functions